# Job-Finder

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Dockerfile.sqlite-web  docker-compose.yml  pyproject.toml
.github/workflows/: build_image.yml  build_image_and_update_vm.yml
job_finder/: run_job.sh  update_notion.py  verify_crawler_status.py
job_finder/job_finder/: items.py  middlewares.py  pipelines.py  settings.py
job_finder/job_finder/spiders/amazon/: __init__.py
job_finder/job_finder/spiders/google/: __init__.py
job_finder/job_finder/spiders/microsoft/: __init__.py
